Fixed rsvp page when overflowing

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -444,6 +444,15 @@ input[type="checkbox"] {
   line-height: 1em;
 }
 
+.rsvp-title {
+  color: #000;
+  font-size: 24px;
+  text-align: center;
+  font-family: "Old Standard TT", serif;
+  font-weight: 400;
+  line-height: 1em;
+}
+
 .banner-padding .cat {
   background: #fff;
   color: #9d7651;
